fix(files): corrects overflow of filenames in chats

--- a/src/styles/components/inline-files.scss
+++ b/src/styles/components/inline-files.scss
@@ -35,6 +35,7 @@
       max-width: 100%;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
